# subscription_app

./: README.md  pyproject.toml  setup.py
subscription_app/: hooks.py  modules.txt
subscription_app/fixtures/: email_template.json
subscription_app/subscription_app/doctype/bot_subscription/: bot_subscription.js  bot_subscription.json  bot_subscription.py  test_bot_subscription.py
